# workflow-tools-demo

./: .cspell.config.mjs  .gitignore  .pre-commit-config.yaml  README.md  demo.md  pyproject.toml  ruff.toml
.cspell/: custom-python.txt
writing/: .gitignore  common.tex  my-references.bib  style.sty
writing/my-paper/: main.tex  my-paper-commands.tex
