[project]
name = "workflow-tools-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan Schill", email = "nateschill@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
workflow-tools-demo = "workflow_tools_demo:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nb-clean>=4.0.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
